# kiwi-boxed-plugin

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .travis.yml  .virtualenv.dev-requirements.txt  .virtualenv.requirements.txt  MANIFEST.in  Makefile  README.md  README.rst  boxes.yml  kiwi_boxed_plugin.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-publish-to-pypi.yml  ci-testing.yml
boxes/: box-key-unsafe.tgz  images.sh
boxes/fedora/: appliance.kiwi  config.sh
boxes/fedora/root/etc/sysconfig/network-scripts/: ifcfg-lan0
boxes/fedora/root/etc/systemd/system/: bundle.mount
boxes/fedora/root/usr/lib/systemd/system/: kiwi.service
boxes/leap/: appliance.kiwi  config.sh
boxes/staging/: appliance.kiwi  config.sh
boxes/staging/root/etc/: fstab.script
boxes/staging/root/etc/lvm/: lvm.conf
boxes/staging/root/etc/systemd/system/console-getty.service.d/: override.conf
boxes/staging/root/etc/systemd/system/serial-getty@hvc0.service.d/: override.conf
boxes/staging/root/usr/lib/systemd/system/: kiwi.service
boxes/suse/: appliance.kiwi  config.sh
boxes/suse/root/etc/systemd/system/: description.automount  description.mount
boxes/suse/root/etc/systemd/system/serial-getty@ttyS0.service.d/: override.conf
boxes/tumbleweed/: appliance.kiwi  config.sh
boxes/ubuntu/: appliance.kiwi  config.sh  post_bootstrap.sh
boxes/ubuntu/root/etc/netplan/: 01-netcfg.yaml
boxes/ubuntu/root/etc/systemd/network/: lan0.network
boxes/universal/: appliance.kiwi  config.sh
boxes/x86/suse/: config.sh
boxes/x86/suse/root/etc/systemd/system/: bundle.automount
boxes/x86/suse/root/usr/lib/systemd/system/: kiwi.service
doc/source/: commands.rst  conf.py
doc/source/commands/: system_boxbuild.rst
kiwi_boxed_plugin/: box_build.py  box_config.py  box_container_build.py  box_download.py  cli.py  defaults.py  exceptions.py  plugin_config.py  plugin_config_schema.py  version.py
kiwi_boxed_plugin/config/: kiwi_boxed_plugin.yml
kiwi_boxed_plugin/tasks/: system_boxbuild.py
kiwi_boxed_plugin/utils/: dir_files.py  fetch_files.py
package/: python-kiwi_boxed_plugin-spec-template  python-kiwi_boxed_plugin.changes
poc/: load-fedora.sh  load.sh  run-fedora.sh  run.sh
test/data/: boxes.yml  kiwi_boxed_plugin.yml  kiwi_boxed_plugin_invalid.yml
test/unit/: .coveragerc  box_build_test.py  box_config_test.py  box_containerbuild_test.py  box_download_test.py  defaults_test.py  plugin_config_test.py
test/unit/tasks/: system_boxbuild_test.py
test/unit/utils/: dir_files_test.py  fetch_files_test.py
